# Threat-Shield

./: README.md  build_exe.py  pyproject.toml  requirements.txt  run.py
cyberfox/: __init__.py  config.py  main.py
cyberfox/core/: __init__.py  breach_checker.py  browser_analyzer.py  darkweb_monitor.py  file_scanner.py  file_scanner.py.bak  ml_threat_analyzer.py  realtime_protection.py  threats.py
cyberfox/ui/: __init__.py  animations.py  dashboard.py  main_window.py  resources.py  risk_visualizer.py  style.py  visualization_tab.py
cyberfox/utils/: __init__.py  helpers.py  n8n_integration.py  web_scraper.py
